--- a/index.html
+++ b/index.html
@@ -53,9 +53,6 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#Contacto">Contacto</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="registrate.html">registrate</a>
-                    </li>
                 </ul>
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -76,10 +73,10 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="img/1.webp" class="d-block w-100" alt="...">
+                <img src="img-carrusel/1.svg" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
-                <img src="img/2.webp" class="d-block w-100" alt="...">
+                <img src="img-carrusel/2.svg" class="d-block w-100" alt="...">
             </div>
             <div class="carousel-item">
                 <img src="img/3.webp" class="d-block w-100" alt="...">
